--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -32,7 +32,7 @@
           <a href="{% url 'password_reset' %}">Forgot your password?</a>
         </div>
         <div class="join-us">
-          <a href="{% url 'signup' %}" class="">Join us</a>
+          <a href="{% url 'about' %}" class="">Join us</a>
         </div>
       </div>
     </div>
