--- a/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
@@ -16,7 +16,7 @@
             I know this might sound a bit unusual...
 
         </p>
-        <br><a href="{% url 'about' %}" class="learn-more-btn">Learn More ></a>
+        <br><a href="{% url 'about' %}" class="learn-more-btn">Read More ></a>
         <a href="{% url 'signup' %}" class="join-us-btn"> Join us </a>
     </div>
 </div>
