--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -5,7 +5,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-/* Apply box-sizing and global reset */
 *,
 *::before,
 *::after {
@@ -51,7 +50,7 @@ body p {
     position: relative;
 }
 
-.footer {
+footer {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -60,7 +59,6 @@ body p {
     height: 60px;
     width: 100%;
     bottom: 0;
-    z-index: -1;
 }
 
 .copyright {
@@ -70,10 +68,25 @@ body p {
     text-decoration: none;
     gap: 2rem;
     padding: 8px;
+    z-index: 1002;
 }
 
 .copyright a {
     color: black;
+}
+
+/*------------Exercise Container -------*/
+.exercise-container {
+    flex-direction: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 80px;
+}
+
+.exercise-container h1,
+h2,
+p {
+    color: whitesmoke;
 }
 
 /*------------Landing Page ------------*/
@@ -171,7 +184,6 @@ body p {
 /*------------Anas Changes profile---------*/
 /*------------profile page---------*/
 
-/* Flex container for the intro section */
 .row {
     display: flex;
     padding: 5px;
@@ -268,7 +280,7 @@ input[type="submit"] {
 .message {
     background-color: #dff0d8;
     border: 1px solid #d6e9c6;
-    color: #3c763d;
+    color: whitesmoke;
     padding: 10px;
     margin-bottom: 10px;
     position: relative;
@@ -464,26 +476,6 @@ img {
         margin-right: auto;
     }
 }
-
-/*------------settings---------------------*/
-
-.profile_settings {
-    background-color: #2929294f;
-    border-radius: 30px;
-    padding: 30px;
-}
-
-.profile_settings a {
-    text-decoration: none;
-    color: rgba(4, 30, 42, 1)
-}
-
-#image-clear_id,
-label {
-    display: none;
-}
-
-
 
 
 
@@ -595,303 +587,6 @@ button {
 
 .password-reset a {
     text-decoration: none;
-}
-
-
-/*------------profile page---------*/
-
-/* Flex container for the intro section */
-.row {
-    display: flex;
-    padding: 5px;
-    flex-direction: row;
-    align-items: center;
-}
-
-.leftcolumn {
-    float: left;
-
-
-
-}
-
-.rightcolumn {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: fit-content;
-    padding: 5px;
-    border-color: #cccccc00;
-    border-style: solid;
-    border-radius: 10px;
-    margin-right: 10px;
-    align-items: center;
-    text-align: center;
-
-}
-
-.centercolumn {
-    text-transform: uppercase;
-    /* Make the text uppercase */
-    text-align: center;
-    font-size: calc(0.5em + 1vw);
-
-}
-
-/* Clear floats after the columns */
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.profile {
-    background-color: #2929294f;
-    border-radius: 30px;
-    padding: 30px;
-}
-
-.profile_pic img {
-    width: 150px;
-    height: 150px;
-    /* Ensure the image is square */
-    border-radius: 15px;
-    /* Make the image round */
-    object-fit: cover;
-    /* Ensure the image covers the dimensions without distortion */
-}
-
-
-.details {
-    display: flex;
-    padding: 10px;
-    margin-bottom: 10px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-items: center;
-    align-content: flex-start;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-
-.post {
-    width: 100%;
-    padding: 50px;
-    margin-bottom: 50px;
-    background-color: #2929294f;
-    border-radius: 30px;
-    height: fit-content;
-    align-content: center;
-    text-align: center;
-}
-
-#id_height,
-#id_weight {
-    color: black;
-}
-
-input[type="submit"] {
-    color: black;
-}
-
-.message {
-    background-color: #dff0d8;
-    border: 1px solid #d6e9c6;
-    color: #3c763d;
-    padding: 10px;
-    margin-bottom: 10px;
-    position: relative;
-    animation: message 2s forwards;
-}
-
-@keyframes message {
-    100% {
-        display: none;
-    }
-}
-
-.workout {
-    flex-direction: row;
-    display: flex;
-    justify-content: center;
-    background-color: #2929294f;
-    border-radius: 30px;
-
-}
-
-img {
-    width: 100%;
-
-}
-
-
-.muscles {
-    margin: 20px;
-    margin-top: 40px;
-    width: 300px;
-    aspect-ratio: 9 / 12;
-    position: relative;
-    transform-style: preserve-3d;
-    transition: rotate var(--timing) ease;
-}
-
-.muscles:hover {
-    rotate: x var(--rotation);
-}
-
-
-.muscles::before {
-    border-radius: 20px;
-    content: '';
-    position: absolute;
-    inset: 0;
-    /* background: limegreen; */
-    z-index: 100;
-    background-image: radial-gradient(circle, transparent 50px, black);
-    opacity: 0;
-    transition: opacity var(--timing);
-}
-
-.muscles:hover::before {
-    opacity: 1;
-}
-
-.muscles::after {
-    content: "";
-    position: absolute;
-    inset: 80% 1.5rem 1.5rem;
-    translate: 0;
-    transform: translateZ(-100px);
-    background: #d19b4e;
-    filter: blur(1rem);
-    z-index: 1;
-    transition: translate var(--timing);
-}
-
-.muscles:hover::after {
-    rotate: x calc(var(--rotation)) * -1;
-    translate: 0 40px;
-}
-
-.bg-muscles {
-    border-radius: 20px;
-    position: absolute;
-    z-index: 10;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.logo,
-.front-image {
-    position: absolute;
-}
-
-.logo {
-    z-index: 1000;
-    filter: invert(0);
-    width: 100%;
-    margin-inline: auto;
-    /* transform: translateY(0rem) translateZ(20px); */
-    inset: auto 0 2rem;
-    transition: var(--timing);
-}
-
-
-.front-image {
-    scale: 1.5;
-    transform-origin: center;
-    opacity: 0;
-    z-index: 100;
-    transition: var(--timing);
-    rotate: x -35deg;
-}
-
-.muscles:hover .front-image {
-    opacity: 1;
-    /* transform: translateY(-2rem) translateZ(-10px); */
-}
-
-/*Progress Bar*/
-
-.member-progress {
-    display: block;
-    width: 50%;
-    height: 100px;
-    text-align: left;
-    background-color: #2929294f;
-    border-radius: 30px;
-    padding: 15px;
-    margin-bottom: 20px;
-
-}
-
-.member-progress h2 {
-    letter-spacing: 1px;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    color: #ffffff;
-    font-size: 16px;
-
-}
-
-.progress-bar {
-    background: white;
-    width: 100%;
-    height: 25px;
-    border-radius: 5px;
-
-}
-
-.progress-bar div {
-    height: 25px;
-    border-radius: 5px;
-    width: 0%;
-
-}
-
-.progress-bar div span {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    background: #fff;
-    float: right;
-    margin-top: -10px;
-    margin-right: -30px;
-    margin-left: 30px;
-    color: #959595;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid rgb(100, 248, 1);
-
-}
-
-.progress {
-
-    background: rgb(100, 248, 1);
-    animation: progress 1s linear forwards;
-}
-
-@keyframes progress {
-    100% {
-        width: var(--width);
-    }
-}
-
-
-@media (max-width: 768px) {
-    .progress-bar {
-        width: 100%;
-        /* Adjust width for smaller screens */
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .progress-bar div span {
-        margin-left: auto;
-        margin-right: auto;
-    }
 }
 
 
