--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/timer_css.css' %}">
-<div class="excersie-container">
+<div class="exercise-container">
     <h1>FitBastards Timer</h1>
 
     <button id="start-btn">Start</button>
