--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -515,7 +515,7 @@ img {
 
 .login-box {
     flex-direction: column;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 16px;
     padding: 20px;
     box-shadow: 0px 5px 12px #292929;
