--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_loose.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_loose.html
@@ -1,16 +1,11 @@
 {% extends 'fitness_jerk/base.html' %}
 {% load static %}
 
-{% block title %}Training Loose It All!{% endblock %}
+{% block title %}Training Tone it Down!{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/timer_css.css' %}">
-<div class=" exercise-container">
-    <h1>FitBastards Timer</h1>
-
-    <button id="start-btn">Start</button>
-    <button id="pause-resume-btn">Pause</button>
-    <button id="finish-btn" style="display:none;"><a href="{% url 'finish' %}">Finish</a></button>
+<div class="exercise-container">
 
     <h1>Exercise List</h1>
     <h2>Exercises</h2>
@@ -20,12 +15,28 @@
         <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
             style="display: none;">
             <span class="exercise-name">{{ exercise.name }}</span>
+            <iframe width="320" height="240"
+                src="{{ exercise.video_url }}?start={{ exercise.start_time }}&end={{ exercise.end_time }}"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
         </li>
         {% endfor %}
         {% endif %}
     </ul>
     <div id="message">Start</div>
     <div id="timer"></div> <!-- Initialize with 30 seconds -->
+    <div class="button-layout">
+        <button id="start-btn">
+            <img src="{% static 'play.svg' %}" alt="Play">
+        </button>
+        <button id="finish-btn">
+            <a href="{% url 'finish' %}">Finish</a>
+        </button>
+        <button id="pause-resume-btn">
+            <img src="{% static 'pause.svg' %}" alt="Play">
+        </button>
+    </div>
 
     <script src="{% static 'timer_js.js' %}"></script>
     <script src="{% static 'navbar_js.js' %}"></script>
