--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
@@ -1,7 +1,7 @@
 {% extends 'fitness_jerk/base.html' %}
 {% load static %}
 
-{% block title %}Training Loose It All!{% endblock %}
+{% block title %}Training Tone it Down!{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/timer_css.css' %}">
@@ -15,6 +15,11 @@
         <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
             style="display: none;">
             <span class="exercise-name">{{ exercise.name }}</span>
+            <iframe width="320" height="240"
+                src="{{ exercise.video_url }}?start={{ exercise.start_time }}&end={{ exercise.end_time }}"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
         </li>
         {% endfor %}
         {% endif %}
@@ -23,13 +28,17 @@
     <div id="timer"></div> <!-- Initialize with 30 seconds -->
     <div class="button-layout">
         <button id="start-btn">
-            <img src="../../static/play.svg" alt="Play"></button>
-        <button id="finish-btn"><a href="{% url 'finish' %}">Finish</a></button>
-        <button id="pause-resume-btn"><img src="../../static/pause.svg" alt="Play"></button>
-        <!-- <button id="finish-btn" style="display:none;"><a href="{% url 'finish' %}">Finish</a></button> -->
-
-        <script src="{% static 'timer_js.js' %}"></script>
-        <script src="{% static 'navbar_js.js' %}"></script>
+            <img src="{% static 'play.svg' %}" alt="Play">
+        </button>
+        <button id="finish-btn">
+            <a href="{% url 'finish' %}">Finish</a>
+        </button>
+        <button id="pause-resume-btn">
+            <img src="{% static 'pause.svg' %}" alt="Play">
+        </button>
     </div>
+
+    <script src="{% static 'timer_js.js' %}"></script>
+    <script src="{% static 'navbar_js.js' %}"></script>
 </div>
 {% endblock %}
