--- a/fj/fitness_jerk/templates/fitness_jerk/delete.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/delete.html
@@ -10,7 +10,8 @@
     <h2>Are you sure you want to delete your account?</h2><br><br>
     <form action="" method=POST class="delete_form">
         {% csrf_token %}
-        <button class="back_profile"><a href=" {% url 'profile' %}">Back to profile</a></button><br><br>
+        <a href="{% url 'profile' %}"><button type="button" class="back_profile">Back to profile</button></a>
+        <br><br>
         <button type="submit" class="delete">Delete</button>
     </form>
     <script src="{% static 'navbar_js.js' %}"></script>
