--- a/fj/fitness_jerk/templates/fitness_jerk/settings.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/settings.html
@@ -14,6 +14,7 @@
         </div>
         {% endif %}
         <div class="user_details">
+            <p style="text-align: center;">User details</p>
             <br>
             <p>Username: {{ user.username }}</p>
             <br>
@@ -33,7 +34,7 @@
             <div class="custom-dropdown">
                 <label for="avatar-dropdown">Choose avatar:</label>
                 <input type="checkbox" id="avatar-dropdown" class="dropdown-checkbox">
-                <label for="avatar-dropdown" class="dropdown-label">Select</label>
+                <label for="avatar-dropdown" class="dropdown-label">Avatars</label>
                 <div class="dropdown-selected-avatar" id="selected-avatar"></div>
                 <div class="dropdown-options">
                     <label class="option">
