--- a/fj/fitness_jerk/static/css/timer_css.css
+++ b/fj/fitness_jerk/static/css/timer_css.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: #f0f0f0;
     color: #333;
     padding: 20px;
@@ -9,80 +11,125 @@ body {
 
 /*------------Exercise Container -------*/
 .exercise-container {
-    position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 80px auto 0;
-    height: 70%;
-    width: 50%;
-    border-radius: 5%;
+    height: 80%;
+    width: 40%;
+    border-radius: 16px;
     background: whitesmoke;
     box-shadow: 0px 5px 12px #292929;
 }
 
-.exercise-container h1,
-h2,
+.exercise-container h2,
+li,
 p {
-    color: black;
-}
-
-h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
-}
-
-#message {
-    font-size: 1.5em;
-    margin-top: 10px;
-    color: black;
-}
-
-#timer {
-    font-size: 36px;
-    margin-bottom: 15px;
-    color: black;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .button-layout {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     align-content: center;
-    flex-direction: row;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-button {
-    font-size: 16px;
-    padding: 8px 16px;
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    height: 20%;
+    width: 70%;
+    padding: 2% 2%;
+    margin-top: auto;
+    gap: 1rem;
 }
 
 #start-btn {
-    width: 128px;
-    height: 128px;
-    color: black;
-    background: transparent;
+    width: 6.5rem;
+    background: none;
+    cursor: pointer;
+    transition: all .55s ease;
+
 }
 
-#pause-resume-btn {
-    width: 128px;
-    height: 128px;
-    color: black;
-    background: transparent;
+#start-btn:hover {
+    color: #292929;
+    transform: translateX(5px);
 }
+
+#start-btn:active {
+    border: none;
+
+
+
+}
+
 
 #finish-btn {
-    width: 128px;
-    height: 128px;
-    color: black;
-    background: purple;
+    color: whitesmoke;
+    background: gray;
+    border: none;
+    border-radius: 35px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all .55s ease;
+
 }
 
+
+#finish-btn:hover {
+    background: green;
+    color: #292929;
+    transform: translateX(5px)
+}
+
+#finish-btn a {
+    padding: 1rem 2rem;
+    font-weight: 700;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+
+#return-btn {
+    color: whitesmoke;
+    background: gray;
+    border: none;
+    border-radius: 35px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all .55s ease;
+
+}
+
+#return-btn a {
+    padding: 1rem 2rem;
+    font-weight: 700;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+#return-btn:hover {
+    background: red;
+    color: #292929;
+    transform: translateX(5px)
+}
+
+
+#pause-resume-btn {
+    width: 6.5rem;
+    background: none;
+    cursor: pointer;
+
+}
+
+#timer {
+    font-weight: 700;
+}
 
 /* Responsive Design for iPhone */
 @media only screen and (max-width: 480px) {
@@ -94,5 +141,11 @@ button {
     button {
         font-size: 14px;
         padding: 6px 12px;
+    }
+
+    #finish-btn {
+        width: 80%;
+        padding: 0.5rem 1rem;
+        font-size: 14px;
     }
 }
