--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -31,8 +31,13 @@
         <div class="password-reset">
           <a href="{% url 'password_reset' %}">Forgot your password?</a>
         </div>
-        <div class="join-us">
-          <a href="{% url 'about' %}" class="">Join us</a>
+        <div class="login-bottom">
+          <div class="join-us-btn">
+            <a href="{% url 'about' %}">Join us</a>
+          </div>
+          <div class="google-lgn">
+            <a href="#"><img src="../../static/google.png" alt="google" class="google-icon">oogle login</a>
+          </div>
         </div>
       </div>
     </div>
